// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx parses story file fixtures/Children.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": undefined,
    "title": undefined,
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Children prop, children content",
      "nameForId": undefined,
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 8,
        },
        "start": Object {
          "column": 0,
          "line": 8,
        },
      },
      "name": "Children prop, empty body",
      "nameForId": undefined,
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 10,
        },
        "start": Object {
          "column": 0,
          "line": 10,
        },
      },
      "name": "Children prop, no body",
      "nameForId": undefined,
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 12,
        },
        "start": Object {
          "column": 0,
          "line": 12,
        },
      },
      "name": "No children prop, children content",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx parses story file fixtures/Spread.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": undefined,
    "title": undefined,
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 15,
        },
        "start": Object {
          "column": 0,
          "line": 15,
        },
      },
      "name": undefined,
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx parses story file project/src/autoTitle/mdx/MdxMeta.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "title": undefined,
  },
  "stories": Array [],
}
`;

exports[`mdx parses story file project/src/autoTitle/mdx/MdxMetaAndStory.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "title": undefined,
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 5,
        },
      },
      "name": "Primary",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx parses story file project/src/autoTitle/mdx/MdxStory.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": undefined,
    "title": undefined,
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 3,
        },
        "start": Object {
          "column": 0,
          "line": 3,
        },
      },
      "name": "Primary",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx parses story file project/src/autoTitle/mdx/PlainMarkdown.stories.mdx 1`] = `undefined`;

exports[`mdx parses story file project/src/stories/CsfWithMdx.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 5,
      },
      "start": Object {
        "column": 0,
        "line": 5,
      },
    },
    "title": "Example/MDX importing CSF",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 11,
        },
        "start": Object {
          "column": 0,
          "line": 11,
        },
      },
      "name": "Basic",
      "nameForId": "Basic",
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 21,
        },
        "start": Object {
          "column": 0,
          "line": 21,
        },
      },
      "name": "Story name from MDX",
      "nameForId": "Basic 2",
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 25,
        },
        "start": Object {
          "column": 0,
          "line": 25,
        },
      },
      "name": "Basic 3",
      "nameForId": "Basic 3",
    },
  ],
}
`;

exports[`mdx parses story file project/src/stories/CustomId.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": "manually-specified-mdx-id",
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "title": "Example/Custom ID MDX",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 7,
        },
        "start": Object {
          "column": 0,
          "line": 7,
        },
      },
      "name": "Story",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx parses story file project/src/stories/DocsOnly.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "title": "Example/MDX Docs Only",
  },
  "stories": Array [],
}
`;

exports[`mdx parses story file project/src/stories/DocsOnlyTop.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "title": "MDX Docs at top level",
  },
  "stories": Array [],
}
`;

exports[`mdx parses story file project/src/stories/MdxWithStories.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 6,
      },
      "start": Object {
        "column": 0,
        "line": 6,
      },
    },
    "title": "Example/MDX with Stories",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 10,
        },
        "start": Object {
          "column": 0,
          "line": 10,
        },
      },
      "name": "MDX first story",
      "nameForId": undefined,
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 14,
        },
        "start": Object {
          "column": 0,
          "line": 14,
        },
      },
      "name": "MDX second story",
      "nameForId": undefined,
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 18,
        },
        "start": Object {
          "column": 0,
          "line": 18,
        },
      },
      "name": "MDX Story 3",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx parses story file project/src/stories/MdxWithStoriesTop.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 4,
      },
      "start": Object {
        "column": 0,
        "line": 4,
      },
    },
    "title": "MDX with stories, top",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 6,
        },
        "start": Object {
          "column": 0,
          "line": 6,
        },
      },
      "name": "MDX with stories, top",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx parses story file project/src/stories/Precedence.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 4,
      },
      "start": Object {
        "column": 0,
        "line": 4,
      },
    },
    "title": "Example/Precedence",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 20,
        },
        "start": Object {
          "column": 0,
          "line": 20,
        },
      },
      "name": "Story with name, story, body",
      "nameForId": "Small",
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 26,
        },
        "start": Object {
          "column": 0,
          "line": 26,
        },
      },
      "name": "Story with name, body",
      "nameForId": undefined,
    },
  ],
}
`;
